# tiferet-streamlit

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/guides/: page_context.md  session_cache_context.md  streamlit_builder.md  view_component.md  view_context.md
example/: README.md  app.py  config.yml  views.py
example/app/: __init__.py
example/app/events/: __init__.py  calc.py  settings.py
tiferet_streamlit/: __init__.py
tiferet_streamlit/assets/: __init__.py  constants.py
tiferet_streamlit/assets/tests/: test_constants.py
tiferet_streamlit/blueprints/: __init__.py  streamlit.py
tiferet_streamlit/blueprints/tests/: test_streamlit.py
tiferet_streamlit/builders/: __init__.py  main.py
tiferet_streamlit/builders/tests/: test_main.py
tiferet_streamlit/contexts/: __init__.py  page.py  session.py  view.py
tiferet_streamlit/contexts/tests/: conftest.py  test_page.py  test_session.py  test_view.py
tiferet_streamlit/domain/: __init__.py  view.py
tiferet_streamlit/domain/tests/: test_view.py
tiferet_streamlit/interfaces/: __init__.py  view.py
tiferet_streamlit/mappers/: __init__.py
tiferet_streamlit/repos/: __init__.py
tiferet_streamlit/utils/: __init__.py  widgets.py
